--- a/Entrega 6/SPC Produto - Protótipo v1/UDA Brasil/templates/ranking.html
+++ b/Entrega 6/SPC Produto - Protótipo v1/UDA Brasil/templates/ranking.html
@@ -1,68 +1,32 @@
-{% extends 'screen3.html' %}
-              
-{% block content %}
+{% extends 'screen3.html' %} {% block content %}
 
-        <table class="table-striped">
-            <thead>
-            <tr>
-                <th>Posição</th>
-                <th>ID Fonte</th>
-                <th>Pontuação Geral</th>
-                <th>Completude</th>
-                <th>Consistência</th>
-            </tr>
-            </thead>
+<table class="table-striped">
+  <thead>
+    <tr>
+      <th>Posição</th>
+      <th>ID Fonte</th>
+      <th>Pontuação Geral</th>
+      <th>Completude</th>
+      <th>Consistência</th>
+    </tr>
+  </thead>
 
-            <tbody>
-              <tr>
-                <td>{{ranking[0][-1]}}</td>
-                <td>{{ranking[0][1]}}</td>
-                <td>{{ranking[0][0]}}</td>
-                <td>{{ranking[0][2]}}</td>
-                <td>{{ranking[0][3]}}</td>
-              </tr>
+  <tbody>
+    <!-- O for loop abaixo ordena a tabela que gera o ranking de acordo
+    com a matriz gerada pela função "get_ranking" e importada na rota '/rank'
+     -->
+    {% for fonte in ranking %}
 
-              <tr>
-                <td>{{ranking[1][-1]}}</td>
-                <td>{{ranking[1][1]}}</td>
-                <td>{{ranking[1][0]}}</td>
-                <td>{{ranking[1][2]}}</td>
-                <td>{{ranking[1][3]}}</td>
-              </tr>
+    <tr>
+      <td>{{ fonte[-1] }}</td>
+      <td>{{ fonte[1] }}</td>
+      <td>{{ fonte[0] }}</td>
+      <td>{{ fonte[2] }}</td>
+      <td>{{ fonte[3] }}</td>
+    </tr>
 
-              <tr>
-                <td>{{ranking[2][-1]}}</td>
-                <td>{{ranking[2][1]}}</td>
-                <td>{{ranking[2][0]}}</td>
-                <td>{{ranking[2][2]}}</td>
-                <td>{{ranking[2][3]}}</td>
-              </tr>
-
-              <tr>
-                <td>{{ranking[3][-1]}}</td>
-                <td>{{ranking[3][1]}}</td>
-                <td>{{ranking[3][0]}}</td>
-                <td>{{ranking[3][2]}}</td>
-                <td>{{ranking[3][3]}}</td>
-              </tr>
-
-              <tr>
-                <td>{{ranking[4][-1]}}</td>
-                <td>{{ranking[4][1]}}</td>
-                <td>{{ranking[4][0]}}</td>
-                <td>{{ranking[4][2]}}</td>
-                <td>{{ranking[4][3]}}</td>
-              </tr>
-
-              <tr>
-                <td>{{ranking[5][-1]}}</td>
-                <td>{{ranking[5][1]}}</td>
-                <td>{{ranking[5][0]}}</td>
-                <td>{{ranking[5][2]}}</td>
-                <td>{{ranking[5][3]}}</td>
-              </tr>
-
-            </tbody>
-        </table>
+    {% endfor %}
+  </tbody>
+</table>
 
 {% endblock %}
