--- a/Entrega 6/SPC Produto - Protótipo v1/UDA Brasil/templates/screen2.html
+++ b/Entrega 6/SPC Produto - Protótipo v1/UDA Brasil/templates/screen2.html
@@ -1,109 +1,120 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    
-    
-    
-    <title>Input dos Dados</title>
-    
-    <link rel="stylesheet" href="../static/styles/screen2.css">
-    
-  </head>
 
-  <body>
-      <div id="bt_sair">
-        <label id="label_bt_sair">
-          Sair
-          <input type="Button"></input>
-        </label>
-      </div>
+<head>
+  <meta charset="UTF-8">
+  <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+  <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
 
-      <div id="titulo">
-          <h1>SELECIONE AS PLANILHAS:</h1>
-      </div>
 
-    
-    <form action="/upload" enctype="multipart/form-data" method="post" id="box1">
-      <div id="STG_FNT_ITT"><h1>STG_FNT_ITT</h1></div>
-      <div id="STG_FNT_ITT_caixa"></div>
- 
-      <div id="bt_1">
-        <label id="label_bt1">
-          Selecionar
-        <input type="file" name="inputFile" id="input_file" value="input_tb1"/>
-        </label>
-      </div>    
-      <div><button type="submit">ENVIAR FONTE</button></div>  
-    </form> 
 
-    
+  <title>Input dos Dados</title>
 
-    <form action="/upload" enctype="multipart/form-data" method="post" id="box2">
-      <div id="STG_MDL"><h1>STG_MDL</h1></div>
-      <div id="STG_MDL_caixa"></div>
- 
-      <div id="bt_2">
-        <label id="label_bt2">
-          Selecionar
-        <input type="file" id="input_file" name = "inputFile" value="input_tb2"/>
-        </label>
-      </div> 
-      <div><button type="submit">ENVIAR MODALIDADE</button></div>
-    </form>
+  <link rel="stylesheet" href="../static/styles/tela2.css">
 
-    <form action="/upload" enctype="multipart/form-data" method="post" id="box3">
-      <div id="STG_MVT_CRD"><h1>STG_MVT_CRD</h1></div>
-      <div id="STG_MVT_CRD_caixa"></div>
- 
-      <div id="bt_3">
-        <label id="label_bt3">
-          Selecionar
-        <input type="file" id="input_file" name="inputFile" value="input_tb3"/>
-        </label>
-      </div> 
-      <div><button type="submit">ENVIAR MOVIMENTAÇÂO</button></div>
-    </form>
+</head>
 
-    <form action="/upload" enctype="multipart/form-data" method="post" id="box4">
-      <div id="STG_OPR_ITT"><h1>STG_OPR_ITT</h1></div>
-      <div id="STG_OPR_ITT_caixa"></div>
- 
-      <div id="bt_4">
-        <label id="label_bt4">
-          Selecionar
-        <input type="file" id="input_file" name="inputFile" value="input_tb4"/>
-        </label>
-      </div> 
-      <div><button type="submit">ENVIAR OPERAÇÃO</button></div>
-    </form>
+<body>
+  <div id="bt_sair">
+    <label id="label_bt_sair">
+      Sair
+      <input type="Button"></input>
+    </label>
+  </div>
 
-    <form action="/upload" enctype="multipart/form-data" method="post" id="box5">
-      <div id="STG_PGT"><h1>STG_PGT</h1></div>
-      <div id="STG_PGT_caixa"></div>
-      
-      <div id="bt_5">
-        <label id="label_bt5">
-          Selecionar
-        <input type="file" name="inputFile" id="input_file" value="input_tb5"/>
-        </label>
-      </div> 
-      <div><button type="submit">ENVIAR PAGAMENTO</button></div>  
-    </form>
+  <div id="titulo">
+    <h1>SELECIONE AS PLANILHAS:</h1>
+  </div>
 
-    <div id="bt_rank">
-      <button type="submit" value="ranquear">
-        <a href="http://127.0.0.1:5000/rank">RANQUEAR</a>
-      </button>
+
+  <form action="/upload" enctype="multipart/form-data" method="post" id="box1">
+    <div id="STG_FNT_ITT">
+      <h1>STG_FNT_ITT</h1>
+    </div>
+    <div id="STG_FNT_ITT_caixa"></div>
+
+    <div id="bt_1">
+      <label id="label_bt1">
+        Selecionar
+        <input type="file" name="inputFile" id="input_file" value="input_tb1" />
+      </label>
     </div>
 
-    
-  
+    <div id="s1"><button type="submit">ENVIAR FONTE</button></div>
+
+  </form>
 
 
-  </body>
+
+  <form action="/upload" enctype="multipart/form-data" method="post" id="box2">
+    <div id="STG_MDL">
+      <h1>STG_MDL</h1>
+    </div>
+    <div id="STG_MDL_caixa"></div>
+
+    <div id="bt_2">
+      <label id="label_bt2">
+        Selecionar
+        <input type="file" id="input_file" name="inputFile" value="input_tb2" />
+      </label>
+    </div>
+    <div><button type="submit">ENVIAR MODALIDADE</button></div>
+  </form>
+
+  <form action="/upload" enctype="multipart/form-data" method="post" id="box3">
+    <div id="STG_MVT_CRD">
+      <h1>STG_MVT_CRD</h1>
+    </div>
+    <div id="STG_MVT_CRD_caixa"></div>
+
+    <div id="bt_3">
+      <label id="label_bt3">
+        Selecionar
+        <input type="file" id="input_file" name="inputFile" value="input_tb3" />
+      </label>
+    </div>
+    <div><button type="submit">ENVIAR MOVIMENTAÇÂO</button></div>
+  </form>
+
+  <form action="/upload" enctype="multipart/form-data" method="post" id="box4">
+    <div id="STG_OPR_ITT">
+      <h1>STG_OPR_ITT</h1>
+    </div>
+    <div id="STG_OPR_ITT_caixa"></div>
+
+    <div id="bt_4">
+      <label id="label_bt4">
+        Selecionar
+        <input type="file" id="input_file" name="inputFile" value="input_tb4" />
+      </label>
+    </div>
+    <div><button type="submit">ENVIAR OPERAÇÃO</button></div>
+  </form>
+
+  <form action="/upload" enctype="multipart/form-data" method="post" id="box5">
+    <div id="STG_PGT">
+      <h1>STG_PGT</h1>
+    </div>
+    <div id="STG_PGT_caixa"></div>
+
+    <div id="bt_5">
+      <label id="label_bt5">
+        Selecionar
+        <input type="file" name="inputFile" id="input_file" value="input_tb5" />
+      </label>
+    </div>
+    <div><button type="submit">ENVIAR PAGAMENTO</button></div>
+  </form>
+
+  <div id="bt_rank">
+    <button type="submit" value="ranquear">
+      <a href="http://127.0.0.1:5000/rank">RANQUEAR</a>
+    </button>
+  </div>
 
 
+
+
+
+</body>
