--- a/Entrega 6/SPC Produto - Protótipo v1/UDA Brasil/static/styles/tela2.css
+++ b/Entrega 6/SPC Produto - Protótipo v1/UDA Brasil/static/styles/tela2.css
@@ -10,7 +10,7 @@
 
 
 
-#bt_sair {
+/* #bt_sair {
     position: absolute;
     width: 64px;
     height: 29.66px;
@@ -39,7 +39,7 @@
 
     color: #FFFFFF;
 
-}
+} */
 
 
 #titulo {
