--- a/Entrega 6/SPC Produto - Protótipo v1/UDA Brasil/templates/ranking.html
+++ b/Entrega 6/SPC Produto - Protótipo v1/UDA Brasil/templates/ranking.html
@@ -8,6 +8,7 @@
       <th>Pontuação Geral</th>
       <th>Completude</th>
       <th>Consistência</th>
+      <th>Confiabilidade</th>
     </tr>
   </thead>
 
@@ -19,10 +20,11 @@
 
     <tr>
       <td>{{ fonte[-1] }}</td>
-      <td>{{ fonte[1] }}</td>
       <td>{{ fonte[0] }}</td>
+      <td>{{ fonte[1] }}</td>
       <td>{{ fonte[2] }}</td>
       <td>{{ fonte[3] }}</td>
+      <td>{{ fonte[4] }}</td>
     </tr>
 
     {% endfor %}
