Atualização do Log e Correção do ranking (ranking.html e controller.py)

--- a/Entrega 6/SPC Produto - Protótipo v1/UDA Brasil/templates/ranking.html
+++ b/Entrega 6/SPC Produto - Protótipo v1/UDA Brasil/templates/ranking.html
@@ -20,7 +20,7 @@
 
     <tr>
       <td>{{ fonte[-1] }}</td>
-      <td>{{ str(fonte[0])[:5] }}</td>
+      <td>{{ fonte[0] }}</td>
       <td>{{ fonte[1] }}</td>
       <td>{{ fonte[2] }}</td>
       <td>{{ fonte[3] }}</td>
